Solve padding issues on ios

--- a/web/js/calendar/elements/css/controls.css
+++ b/web/js/calendar/elements/css/controls.css
@@ -101,6 +101,7 @@ button {
         display: flex;
         flex-direction: column;
         overflow: hidden;
+        --controls-height: 80px;
     }
     #calendarBody {
         order: 1;
@@ -111,11 +112,15 @@ button {
         /* position: fixed; */
         width: 100vw;
         max-width: 100vw;
-        height: 100px;
-        /* bottom: 0; */
-        /* left: 0; */
+        max-height: var(--controls-height);
+        height: var(--controls-height);
         z-index: 50;
         order: 9;
+        position: absolute;
+        bottom: 0;
+        @supports (padding-bottom: env(safe-area-inset-bottom)) {
+            padding-bottom: env(safe-area-inset-bottom);
+        }
     }
     #calendarRange {
         padding-top: 12px;
@@ -128,11 +133,11 @@ button {
     }
     #calendarBody {
         /* padding-bottom: 120px; */
-        max-height: calc(100vh - 100px - 56px);
+        max-height: calc(100vh - var(--controls-height) - 56px);
     }
     #days1 {
         overflow: scroll;
-        max-height: calc(100vh - 100px - 56px);
+        max-height: calc(100vh - var(--controls-height) - 56px);
     }
 }
 
